--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <div id="width">width</div>
   <div class="test1" id="test">test</div>
 
+  <audio loop="loop" id="audio" src="./audio/scooter5.wav"></audio>
+
   <div class="scorepar0">
     <div style="display: none;" class="score" id="score1"></div>
     <div style="display: none;" class="score" id="record"></div>
@@ -20,6 +22,9 @@
 
   <div id="par" class="par">
 
+    <h2 id="startext" class="startext">თამაშის დასაწყებად დააჭირეთ space ს ან დააწკაპეთ ეკრანზე</h2>
+     <div id="par-child">
+  
     <div id="restartpar" class="restartpar">
       <img class="restart" onclick="restart()" id="reset" src="pictures/restart.png">
    </div>
@@ -49,6 +54,9 @@
     
     <div class="sea">
       <img class="seapic" src="pictures/ss.jpeg" alt="sea">
+    </div>
+
+
     </div>
   </div>
    
