--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 
   <div id="par" class="par">
 
-    <h2 id="startext" class="startext">თამაშის დასაწყებად დააჭირეთ space ს ან დააწკაპეთ ეკრანზე</h2>
+    <div id="startext" class="startext-par">
+      <div class="bantext">
+      <h2 class="startext">თამაშის დასაწყებად დააჭირეთ space ს ან დააწკაპეთ ეკრანზე</h2>
+      <h2 class="lowertext">კომპიუტერზე : ასახტომად დააჭირეთ space ს ან მაღლითა ისარს</h2>
+      <h2  class="lowertext">მობილურზე : ასახტომად დააწკაპეთ ეკრანზე</h2>
+    </div>
+      <img class="banner" src="./pictures/1banner.jpeg" alt="banner">
+      <img class="banner2" src="./pictures/2banner.jpeg" alt="banner">
+    </div>
      <div id="par-child">
   
     <div id="restartpar" class="restartpar">
